--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164117040-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-164117040-1');
+	</script>
 	<title>Ishan</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -36,8 +44,7 @@
 			</div>
 
 			<div class="image" style="background-image: url('images/bg-small.jpg')">
-				<video playsinline autoplay muted loop name="File navi"
-					src="images/basic.mov" ></video>
+				<video playsinline autoplay muted loop name="File navi" src="images/basic.mov"></video>
 			</div>
 		</section>
 
@@ -79,8 +86,7 @@
 				</p>
 			</div>
 			<div class="image" style="background-image: url('images/bg-small.jpg')">
-				<video playsinline autoplay muted loop name="File navi"
-					src="images/ssh-vid.mov" style=""></video>
+				<video playsinline autoplay muted loop name="File navi" src="images/ssh-vid.mov" style=""></video>
 			</div>
 		</section>
 
@@ -96,8 +102,7 @@
 			</div>
 
 			<div class="image" style="background-image: url('images/bg-small.jpg')">
-				<video playsinline autoplay muted loop name="File navi"
-					src="images/file-navi.mov" style=""></video>
+				<video playsinline autoplay muted loop name="File navi" src="images/file-navi.mov" style=""></video>
 
 			</div>
 		</section>
@@ -136,7 +141,7 @@
 		<!-- Six -->
 		<section class="wrapper style1 align-center">
 			<div class="inner">
-						<a href="" class="button big wide smooth-scroll-middle">Coming soon to the Mac App Store</a>
+				<a href="" class="button big wide smooth-scroll-middle">Coming soon to the Mac App Store</a>
 				</ul>
 			</div>
 		</section>
