--- a/privacy/index.html
+++ b/privacy/index.html
@@ -20,10 +20,9 @@
 	<section
 		class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 		<div class="content">
-			<h1>Need help with Ishan?</h1>
+			<h2>Privacy</h2>
 			<p class="major">
-				Please contact <a href="mailto:questions@shellnotebook.com">questions@shellnotebook.com</a> <br>
-				Expect a response within 24 hours.
+				Ishan collects no information from developers. All files are stored locally.
 			</p>
 		</div>
 
