--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
 					A delightful CLI for the Mac. <br>
 					Save and organize your commands.
 				</p>
-				<ul class="actions">
-					<li><a href="" class="button big wide smooth-scroll-middle">Coming soon to the Mac App Store</a>
-					</li>
-				</ul>
+				<a href="https://apps.apple.com/us/app/interactive-shell-and-notebook/id1507604483?ls=1"
+					class="">
+					<img width='200px' src='images/black_button.svg'></img></a>
 			</div>
 
 			<div class="image" style="background-image: url('images/bg-small.jpg')">
@@ -141,8 +140,9 @@
 		<!-- Six -->
 		<section class="wrapper style1 align-center">
 			<div class="inner">
-				<a href="" class="button big wide smooth-scroll-middle">Coming soon to the Mac App Store</a>
-				</ul>
+				<a href="https://apps.apple.com/us/app/interactive-shell-and-notebook/id1507604483?ls=1"
+					class="">
+					<img width='200px' src='images/black_button.svg'></img></a>
 			</div>
 		</section>
 
