--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		gtag('config', 'UA-164117040-1');
 	</script>
-	<title>Ishan</title>
+	<title>Shell Notebook</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,7 +32,7 @@
 		<section
 			class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 			<div class="content">
-				<h1>Ishan: The Interactive Shell and Notebook</h1>
+				<h1>Shell Notebook</h1>
 				<p class="major">
 					A delightful CLI for the Mac. <br>
 					Save and organize your commands.
@@ -52,7 +52,7 @@
 			<div class="inner">
 				<h2>Developer tools matter</h2>
 				<p>So why are you using a terminal designed in the 1970's? <br>
-					Ishan is packed with features to unleash your productivity. </p>
+					Shell Notebook is packed with features to unleash your productivity. </p>
 			</div>
 		</section>
 
@@ -62,7 +62,7 @@
 			<div class="content">
 				<h1>Save and Organize Commands</h1>
 				<p class="major">
-					Ishan was built to optimize common workflows on the terminal.
+					Shell Notebook was built to optimize common workflows on the terminal.
 					Keep your commonly used commands in a single location, and run them together. Effortlessly.
 
 					Don't worry about what that third flag was. Save your notebooks so you can keep coming back to them.
@@ -152,7 +152,7 @@
 			<div class="inner">
 				<p>
 					Ishaan Gandhi <br>
-					&copy; Ishan 2020. Design: <a href="https://html5up.net">HTML5 UP</a>.
+					&copy; Shell Notebook 2020. Design: <a href="https://html5up.net">HTML5 UP</a>.
 				</p>
 			</div>
 		</footer>
