--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="icon" href="favicon.png">
 </head>
 
 <body class="is-preload">
@@ -37,9 +38,8 @@
 					A delightful CLI for the Mac. <br>
 					Save and organize your commands.
 				</p>
-				<a href="https://apps.apple.com/us/app/interactive-shell-and-notebook/id1507604483?ls=1"
-					class="">
-					<img width='200px' src='images/black_button.svg'></img></a>
+					<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download free version</button></a>
+					<a> <button id="buyButton">Buy license key</button> </a>
 			</div>
 
 			<div class="image" style="background-image: url('images/bg-small.jpg')">
@@ -140,10 +140,10 @@
 		<!-- Six -->
 		<section class="wrapper style1 align-center">
 			<div class="inner">
-				<a href="https://apps.apple.com/us/app/interactive-shell-and-notebook/id1507604483?ls=1"
-					class="">
-					<img width='200px' src='images/black_button.svg'></img></a>
-			</div>
+				<h2>Get the app</h2>
+				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download free version</button></a>
+				<a> <button id="buyButton">Buy license key</button> </a>
+		</div>
 		</section>
 
 
@@ -167,6 +167,8 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="assets/js/payment.js"></script>
+	<script src="https://js.stripe.com/v3/"></script>
 
 	<!-- for css -->
 	<style>
