--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			<div class="inner">
 				<h2>Get the app</h2>
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download free version</button></a>
-				<a> <button id="buyButton">Buy license key</button> </a>
+				<a> <button id="buyButton2">Buy license key</button> </a>
 		</div>
 		</section>
 
