--- a/index.html
+++ b/index.html
@@ -117,20 +117,15 @@
 						<code>⌘+O</code> Open <br>
 						<code>⌘+S</code> Save <br>
 						<code>⌘+Shift+S</code> Save as.. <br>
+						<code>⌘+D</code> Delete cell <br>
+						<code>⌘+N</code> New cell <br>
 					</div>
 					<div class="column">
-
+						<code>⌘+R</code> Connect to host <br>
 						<code>⌘+W</code> Close tab <br>
 						<code>⌃⌥↑</code> Move cell up <br>
 						<code>⌃⌥↓</code> Move cell down <br>
 						<code>⇧+enter</code> Run cell <br>
-					</div>
-					<div class="column">
-						<code>⌘+D</code> Delete cell <br>
-						<code>⌘+N</code> New cell <br>
-						<code>⌘+R</code> Connect remote machine <br>
-						<code>⌘+Shift+R</code> Disconnect remote machine <br>
-
 					</div>
 				</div>
 			</div>
