--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		<footer class="wrapper style1 align-center">
 			<div class="inner">
 				<p>
-					Ishaan Gandhi <br>
+					<!-- Ishaan Gandhi <br> -->
 					&copy; Shell Notebook 2020. Design: <a href="https://html5up.net">HTML5 UP</a>.
 				</p>
 			</div>
