--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 
 		gtag('config', 'UA-164117040-1');
 	</script>
+
+	<!-- Google Tag Manager -->
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-5RFCXVH');</script>
+	<!-- End Google Tag Manager -->
+
 	<title>Shell Notebook</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -26,6 +38,10 @@
 </head>
 
 <body class="is-preload">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5RFCXVH" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 
 	<!-- Wrapper -->
 	<div id="wrapper" class="divided">
@@ -38,8 +54,9 @@
 					A delightful CLI for the Mac. <br>
 					Save and organize your commands.
 				</p>
-					<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download free version</button></a>
-					<a> <button id="buyButton">Buy license key</button> </a>
+				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download
+						free version</button></a>
+				<a> <button id="buyButton">Buy license key</button> </a>
 			</div>
 
 			<div class="image" style="background-image: url('images/bg-small.jpg')">
@@ -136,9 +153,10 @@
 		<section class="wrapper style1 align-center">
 			<div class="inner">
 				<h2>Get the app</h2>
-				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download free version</button></a>
+				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download
+						free version</button></a>
 				<a> <button id="buyButton2">Buy license key</button> </a>
-		</div>
+			</div>
 		</section>
 
 
