--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					Save and organize your commands.
 				</p>
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download
-						free version</button></a>
+						for mac</button></a>
 				<a> <button id="buyButton">Buy license key</button> </a>
 			</div>
 
@@ -123,6 +123,18 @@
 			</div>
 		</section>
 
+		<section class="wrapper style1 align-center">
+			<div class="inner">
+				<h2>Pricing</h2>
+				<p>Shell Notebook may be downloaded and used for free for trial use.
+					There is
+					no time limit for trial use, and the trial version is fully
+					featured. </br>
+					However, an individual license ($39) must be purchased for
+					extended use. </br>
+			</div>
+		</section>
+
 		<!-- Five -->
 		<section class="wrapper style1 align-center">
 			<div class="inner">
@@ -154,7 +166,7 @@
 			<div class="inner">
 				<h2>Get the app</h2>
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download
-						free version</button></a>
+						for mac</button></a>
 				<a> <button id="buyButton2">Buy license key</button> </a>
 			</div>
 		</section>
