--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					There is
 					no time limit for trial use, and the trial version is fully
 					featured. </br>
-					However, an individual license ($39) must be purchased for
+					However, an individual license (<span id="price">$39</span>) must be purchased for
 					extended use. </br>
 			</div>
 		</section>
