--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+	<script src="https://geoip-js.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script>
 	<script src="assets/js/payment.js"></script>
 	<script src="https://js.stripe.com/v3/"></script>
 
