--- a/index.html
+++ b/index.html
@@ -54,10 +54,15 @@
 					A delightful CLI for the Mac. <br>
 					Save and organize your commands.
 				</p>
-				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download
-					for mac</button></a>
-					<a> <button id="buyButton">Buy license key</button> </a>
-</div>
+				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
+					<button>
+						Download for mac</button></a>
+				<a> <button id="buyButton">Buy license key</button> </a>
+				<br>
+				<br>
+				<a href="https://medium.com/@ishaangandhi/writing-your-first-notebook-6bc32578a9e7">
+					View quickstart guide on Medium</a>
+			</div>
 
 			<div class="image" style="background-image: url('images/bg-small.jpg')">
 				<video playsinline autoplay muted loop name="File navi" src="images/basic.mov"></video>
@@ -70,9 +75,13 @@
 				<h2>Developer tools matter</h2>
 				<p>So why are you using a terminal designed in the 1970's? <br>
 					Shell Notebook is packed with features to unleash your productivity. </p>
-				<a href="https://www.producthunt.com/posts/shell-notebook?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-shell-notebook" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=201740&theme=light" alt="Shell Notebook - MacOS Terminal, reimagined | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>			
-			
-				</div>
+				<a href="https://www.producthunt.com/posts/shell-notebook?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-shell-notebook"
+					target="_blank"><img
+						src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=201740&theme=light"
+						alt="Shell Notebook - MacOS Terminal, reimagined | Product Hunt Embed"
+						style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
+
+			</div>
 		</section>
 
 		<!-- Two -->
