--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</p>
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
 					<button>
-						Download for mac</button></a>
+						Download free version</button></a>
 				<a> <button id="buyButton">Buy license key</button> </a>
 				<br>
 				<br>
