--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
 		<section class="wrapper style1 align-center">
 			<div class="inner">
 				<h2>Get the app</h2>
-				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg"><button>Download
-						for mac</button></a>
+				<a
+				href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
+					<button>Download free version</button></a>
 				<a> <button id="buyButton2">Buy license key</button> </a>
 			</div>
 		</section>
