cleaner cd ls thing

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			<div class="content">
 				<h1>Native File Navigation</h1>
 				<p class="major">
-					No more "cd ../..; ls; cd ..; ls;".
+					No more long chains of <code>cd</code> and <code>ls</code>.
 					Navigate around your Mac the way it was supposed to be.
 				</p>
 			</div>
