start for free button

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</p>
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
 					<button>
-						Download free version</button></a>
+						Start for free</button></a>
 				<a> <button id="buyButton">Buy license key</button> </a>
 				<br>
 				<br>
@@ -179,7 +179,7 @@
 				<h2>Get the app</h2>
 				<a
 				href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
-					<button>Download free version</button></a>
+					<button>Start for free</button></a>
 				<a> <button id="buyButton2">Buy license key</button> </a>
 			</div>
 		</section>
