replace cli line

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<div class="content">
 				<h1>Shell Notebook</h1>
 				<p class="major">
-					A delightful CLI for the Mac. <br>
+					Jupyter meets terminal. <br>
 					Save and organize your commands.
 				</p>
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
