--- a/contact/index.html
+++ b/contact/index.html
@@ -20,7 +20,7 @@
 	<section
 		class="banner style1 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 		<div class="content">
-			<h1>Need help with Ishan?</h1>
+			<h1>Need help with Shell Notebook?</h1>
 			<p class="major">
 				Please contact <a href="mailto:questions@shellnotebook.com">questions@shellnotebook.com</a> <br>
 				Expect a response within 24 hours.
