--- a/contact/index.html
+++ b/contact/index.html
@@ -7,8 +7,7 @@
 <html>
 
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<title>Ishan</title>
+	<title>Shell Notebook</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="../assets/css/main.css" />
