--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
 					<button>
 						Start for free</button></a>
-				<a> <button id="buyButton">Buy license key</button> </a>
+				<a href="pricing/index.html"> <button id="">View pricing</button> </a>
 				<br>
 				<br>
 				<a href="https://medium.com/@ishaangandhi/writing-your-first-notebook-6bc32578a9e7">
@@ -135,7 +135,7 @@
 			</div>
 		</section>
 
-		<section class="wrapper style1 align-center">
+		<!-- <section class="wrapper style1 align-center">
 			<div class="inner">
 				<h2>Pricing</h2>
 				<p>Shell Notebook may be downloaded and used for free for trial use.
@@ -145,7 +145,7 @@
 					However, an individual license (<span id="price">$39</span>) must be purchased for
 					extended use. </br>
 			</div>
-		</section>
+		</section> -->
 
 		<!-- Five -->
 		<section class="wrapper style1 align-center">
