--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				<a
 				href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
 					<button>Start for free</button></a>
-				<a> <button id="buyButton2">Buy license key</button> </a>
+				<a href="pricing/index.html"> <button id="">Buy license key</button> </a>
 			</div>
 		</section>
 
