buy license key

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
 					<button>
 						Start for free</button></a>
-				<a href="pricing/index.html"> <button id="">View pricing</button> </a>
+				<a href="pricing/index.html"> <button id="">Buy license key</button> </a>
 				<br>
 				<br>
 				<a href="https://medium.com/@ishaangandhi/writing-your-first-notebook-6bc32578a9e7">
