pricing link test

--- a/index.html
+++ b/index.html
@@ -57,12 +57,15 @@
 				</p>
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
 					<button>
-						Start for free</button></a>
-				<a href="pricing/index.html"> <button id="">Buy license key</button> </a>
+						Start for free
+					</button>
+				</a>
+				<a href="pricing"> <button id="">Buy license key</button> </a>
 				<br>
 				<br>
 				<a href="https://medium.com/@ishaangandhi/writing-your-first-notebook-6bc32578a9e7">
-					View quickstart guide on Medium</a>
+					View quickstart guide on Medium
+				</a>
 			</div>
 
 			<div class="image" style="background-image: url('images/bg-small.jpg')">
@@ -177,8 +180,7 @@
 		<section class="wrapper style1 align-center">
 			<div class="inner">
 				<h2>Get the app</h2>
-				<a
-				href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
+				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
 					<button>Start for free</button></a>
 				<a href="pricing/index.html"> <button id="">Buy license key</button> </a>
 			</div>
