pricing link test

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<h2>Get the app</h2>
 				<a href="https://github.com/Ishaangandhi/shellnotebook/releases/latest/download/Shell-Notebook.dmg">
 					<button>Start for free</button></a>
-				<a href="pricing/index.html"> <button id="">Buy license key</button> </a>
+				<a href="pricing"> <button id="">Buy license key</button> </a>
 			</div>
 		</section>
 
