--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
 						Start for free
 					</button>
 				</a>
-				<a href="pricing"> <button id="">Buy license key</button> </a>
+				<a href="pricing">
+					<button id="">
+						Buy license key
+					</button>
+				</a>
 				<br>
 				<br>
 				<a href="https://medium.com/@ishaangandhi/writing-your-first-notebook-6bc32578a9e7">
