--- a/privacy/index.html
+++ b/privacy/index.html
@@ -8,7 +8,7 @@
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<title>Ishan</title>
+	<title>Shell Notebook</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="../assets/css/main.css" />
@@ -22,7 +22,7 @@
 		<div class="content">
 			<h2>Privacy</h2>
 			<p class="major">
-				Ishan collects no information from developers. All files are stored locally.
+				Shell Notebook collects no information from developers. All files are stored locally.
 			</p>
 		</div>
 
