remove images/basic.mov typo

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			class="banner style1 orient-right content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right">
 			<div class="content">
 				<h1>Save and Organize Commands</h1>
-				<p class="major">images/basic.mov
+				<p class="major">
 					Shell Notebook was built to optimize common workflows on the terminal.
 					Keep your commonly used commands in a single location, and run them together. Effortlessly.
 
